<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ibRock"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="fitCenter"
            android:src="@drawable/rock"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/ibPaper"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="fitCenter"
            android:src="@drawable/paper"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/ibScissors"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="fitCenter"
            android:src="@drawable/scissors"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHowto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <TextView
        android:id="@+id/tvScoreHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/stat_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScoreHead" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHowto" />

    <ImageView
        android:id="@+id/ivPC"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/tvVS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/rock"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivHuman"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="60dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVS"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/rock"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versus"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/ivHuman"
        app:layout_constraintStart_toEndOf="@+id/ivPC"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvPC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pc"
        app:layout_constraintEnd_toEndOf="@+id/ivPC"
        app:layout_constraintStart_toStartOf="@+id/ivPC"
        app:layout_constraintTop_toBottomOf="@+id/ivPC" />

    <TextView
        android:id="@+id/tvHuman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/human"
        app:layout_constraintEnd_toEndOf="@+id/ivHuman"
        app:layout_constraintStart_toStartOf="@+id/ivHuman"
        app:layout_constraintTop_toBottomOf="@+id/ivHuman" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/tvVS"
        app:layout_constraintEnd_toStartOf="@+id/ivHuman"
        app:layout_constraintStart_toEndOf="@+id/ivPC" />



</androidx.constraintlayout.widget.ConstraintLayout>